tests/integration/routes/src/three/routes/error/loader/page.loader.ts
const loader = () => {
  throw new Error('loader error');
};

export default loader;
